--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".PaymentActivity"></activity>
-        <activity android:name=".AppointmentActivity" />
+        <activity android:name=".AppointmentActivity" \>
         <activity android:name=".ChangeSettings" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".ProfileActivity" />
