--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MakePaymentActivity"></activity>
+        <activity android:name=".BeauticiansList"></activity>
+        <activity android:name=".MakePaymentActivity" />
         <activity android:name=".PayPalActivity" />
         <activity android:name=".PaymentActivity" />
         <activity android:name=".AppointmentActivity" />
