--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
-        <activity android:name=".BeauticianSide"></activity>
-        <activity android:name=".BeauticiansList"></activity>
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".AddManicureToCartActivity"></activity>
+        <activity android:name=".AddPedicureToCartActivity" />
+        <activity android:name=".BeauticianSide" />
+        <activity android:name=".BeauticiansList" />
         <activity android:name=".MakePaymentActivity" />
         <activity android:name=".PayPalActivity" />
         <activity android:name=".PaymentActivity" />
