--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".AddManicureToCartActivity"></activity>
+        <activity android:name=".AddWomanHaircutToCartActivity"></activity>
+        <activity android:name=".AddManHaircutToCartActivity" />
+        <activity android:name=".AddManicureToCartActivity" />
         <activity android:name=".AddPedicureToCartActivity" />
         <activity android:name=".BeauticianSide" />
         <activity android:name=".BeauticiansList" />
